--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,7 +7,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -89,7 +88,6 @@ deny 107.189.8.181;
 deny 107.189.8.226;
 deny 107.189.8.238;
 deny 107.189.8.56;
-deny 107.20.198.188;
 deny 108.181.27.205;
 deny 108.181.69.243;
 deny 108.61.189.136;
@@ -717,7 +715,6 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
-deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -818,7 +815,6 @@ deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 200.25.27.112;
 deny 202.61.226.98;
-deny 202.61.252.121;
 deny 202.69.76.36;
 deny 204.137.14.104;
 deny 204.137.14.105;
@@ -842,7 +838,6 @@ deny 208.109.215.188;
 deny 208.109.36.224;
 deny 209.141.32.198;
 deny 209.141.38.110;
-deny 209.141.40.44;
 deny 209.141.45.167;
 deny 209.141.46.203;
 deny 209.141.50.178;
@@ -938,8 +933,8 @@ deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.184.48.127;
 deny 23.184.48.128;
 deny 23.94.211.25;
@@ -958,6 +953,7 @@ deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
@@ -1166,7 +1162,6 @@ deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:55:efb::1003;
-deny 2a03:4000:55:efb::a1;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1466,7 +1461,6 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
-deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
 deny 2a0f:93c1:26:1f2::9ce5;
@@ -1509,6 +1503,7 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
+deny 34.236.132.203;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1593,7 +1588,6 @@ deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.38.255.27;
-deny 46.41.150.103;
 deny 47.243.103.140;
 deny 47.243.74.136;
 deny 50.3.182.133;
@@ -1677,7 +1671,6 @@ deny 77.48.28.193;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 77.91.85.147;
-deny 77.91.87.79;
 deny 78.142.18.219;
 deny 79.124.8.241;
 deny 79.137.198.213;
@@ -1763,7 +1756,6 @@ deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.119.126.161;
 deny 92.205.129.119;
-deny 92.243.24.163;
 deny 92.246.84.133;
 deny 92.249.48.135;
 deny 93.123.12.112;
@@ -1791,7 +1783,6 @@ deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.16.112.22;
 deny 94.16.116.81;
-deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
 deny 94.177.106.37;
