--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -24,6 +24,7 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
+deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -635,6 +636,7 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
+deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
 deny 2a0f:93c1:26:1f2::9ce5;
