--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -22,7 +22,6 @@ set_real_ip_from 104.192.171.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
@@ -180,7 +179,6 @@ set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.232.161.205;
-set_real_ip_from 172.232.161.206;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
@@ -262,7 +260,6 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
-set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
@@ -715,6 +712,7 @@ set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:e:70c::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
+set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
@@ -933,6 +931,7 @@ set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
+set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.127;
@@ -1461,6 +1460,7 @@ set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:d602:1:14bc::2;
+set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:d0::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
@@ -1503,7 +1503,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.236.132.203;
+set_real_ip_from 34.207.15.151;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1671,6 +1671,7 @@ set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.85.147;
+set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
@@ -1756,6 +1757,7 @@ set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.119.126.161;
 set_real_ip_from 92.205.129.119;
+set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 92.249.48.135;
 set_real_ip_from 93.123.12.112;
@@ -1783,6 +1785,7 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.112.22;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
