--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -117,7 +117,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -129,7 +128,6 @@ allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
@@ -225,6 +223,7 @@ allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
+allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -266,7 +265,6 @@ allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
-allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
 allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
@@ -428,7 +426,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
