--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,6 +7,7 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -108,6 +109,7 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
+deny 118.163.74.160;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.31.0.13;
@@ -800,6 +802,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -1122,7 +1125,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
-deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
@@ -1133,6 +1135,7 @@ deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
+deny 2a02:c206:2095:2624::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -1207,6 +1210,7 @@ deny 2a03:e600:100::70;
 deny 2a03:e600:100::71;
 deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
+deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
@@ -1218,7 +1222,6 @@ deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:120:a13d::1;
-deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:26c0:d1:12:acdc:feed:beef:66;
@@ -1507,6 +1510,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
+deny 44.198.9.222;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1542,6 +1546,7 @@ deny 45.141.215.88;
 deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
+deny 45.151.122.34;
 deny 45.151.167.10;
 deny 45.151.167.11;
 deny 45.151.167.12;
@@ -1606,7 +1611,9 @@ deny 51.91.18.151;
 deny 5.196.73.12;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 5.255.100.126;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1616,11 +1623,11 @@ deny 5.255.115.42;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.124.150;
-deny 5.255.125.196;
 deny 5.255.125.41;
 deny 5.255.127.222;
 deny 5.255.97.221;
 deny 5.255.98.151;
+deny 5.255.98.198;
 deny 5.255.98.23;
 deny 5.255.99.108;
 deny 5.255.99.124;
@@ -1630,7 +1637,6 @@ deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.39.25.229;
-deny 54.167.48.16;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1695,7 +1701,6 @@ deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
-deny 85.204.116.211;
 deny 85.204.116.88;
 deny 85.215.76.62;
 deny 85.93.218.204;
