--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -166,7 +166,6 @@ allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
-allow 170.187.228.128;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -897,6 +896,7 @@ allow 23.129.64.227;
 allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.137.248.100;
+allow 23.137.248.139;
 allow 23.137.248.152;
 allow 23.137.248.69;
 allow 23.137.249.143;
@@ -931,8 +931,10 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.24.7;
 allow 23.184.48.127;
 allow 23.184.48.128;
+allow 23.21.226.52;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -950,11 +952,13 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
+allow 2602:2e6:0:7::;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:759::1;
+allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:1be9::1;
@@ -1222,6 +1226,7 @@ allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:120:a13d::1;
+allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:26c0:d1:12:acdc:feed:beef:66;
@@ -1510,7 +1515,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.198.9.222;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1579,7 +1583,7 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.120.189;
+allow 46.195.127.150;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1623,6 +1627,7 @@ allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.124.150;
+allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
@@ -1655,7 +1660,6 @@ allow 62.182.83.179;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
-allow 66.175.223.155;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1689,7 +1693,6 @@ allow 82.153.138.79;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1736,7 +1739,6 @@ allow 89.58.41.251;
 allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
-allow 91.139.160.150;
 allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
